TODO:
* add exFAT support
  - debug print exFAT directory entry type
  - add valid data size support
* add number of file entries support?
* add docstring about timestamps in local time or UTC
* use milli / micro seconds POSIX timestamp instead of seconds
* error on volume labels outside of root directory
* add recursion depth checks
* add support for case less comparision
* add support for short and long file name comparison
* add volume (label) last modification time API function
* complete info tool
  - add get by identifier functionality
* complete mount tool

* add API functions
  - to retrieve file entry by identifiers
  - to expose short file name
  - to expose self directory entry
  - to expose parent directory entry
  - to expose extents

* implement Python bindings
  - to retrieve file entry by identifiers
  - to expose extents

20210928
* see `git log' for more recent change log
* Initial version based on previous work on the format and libfsext
