@@ -1865,173 +1865,6 @@ on_error:
 	return( -1 );
 }
 
-/* Prints the file entries information
- * Returns 1 if successful or -1 on error
- */
-int info_handle_file_entries_fprint(
-     info_handle_t *info_handle,
-     libcerror_error_t **error )
-{
-	static char *function           = "info_handle_file_entries_fprint";
-	uint64_t file_entry_identifier  = 0;
-	uint32_t number_of_file_entries = 0;
-
-#ifdef TODO
-	if( libfsfat_volume_get_number_of_file_entries(
-	     info_handle->input_volume,
-	     &number_of_file_entries,
-	     error ) != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve number of file entries.",
-		 function );
-
-		return( -1 );
-	}
-#endif
-	for( file_entry_identifier = 0;
-	     file_entry_identifier < (uint64_t) number_of_file_entries;
-	     file_entry_identifier++ )
-	{
-		if( info_handle_file_entry_fprint_by_identifier(
-		     info_handle,
-		     (uint32_t) file_entry_identifier,
-		     error ) != 1 )
-		{
-			libcerror_error_set(
-			 error,
-			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-			 LIBCERROR_RUNTIME_ERROR_PRINT_FAILED,
-			 "%s: unable to print file entry: %" PRIu64 " information.",
-			 function,
-			 file_entry_identifier );
-
-			return( -1 );
-		}
-	}
-	return( 1 );
-}
-
-/* Prints the file entry information for a specific identifier
- * Returns 1 if successful, 0 if not or -1 on error
- */
-int info_handle_file_entry_fprint_by_identifier(
-     info_handle_t *info_handle,
-     uint32_t file_entry_identifier,
-     libcerror_error_t **error )
-{
-	libfsfat_file_entry_t *file_entry = NULL;
-	static char *function             = "info_handle_file_entry_fprint_by_identifier";
-	uint8_t format_version            = 0;
-	int is_empty                      = 0;
-
-	if( info_handle == NULL )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid info handle.",
-		 function );
-
-		return( -1 );
-	}
-	if( libfsfat_volume_get_format_version(
-	     info_handle->input_volume,
-	     &format_version,
-	     error ) != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve format version.",
-		 function );
-
-		goto on_error;
-	}
-#ifdef TODO
-	if( libfsfat_volume_get_file_entry_by_inode(
-	     info_handle->input_volume,
-	     file_entry_identifier,
-	     &file_entry,
-	     error ) != 1 )
-	{
-		if( ( error != NULL )
-		 && ( *error != NULL ) )
-		{
-			libcnotify_print_error_backtrace(
-			 *error );
-		}
-		libcerror_error_free(
-		 error );
-
-		fprintf(
-		 info_handle->notify_stream,
-		 "Error reading file entry: %" PRIu32 "\n\n",
-		 file_entry_identifier );
-
-		return( 0 );
-	}
-#endif
-	fprintf(
-	 info_handle->notify_stream,
-	 "File entry: %" PRIu32 " information:\n",
-	 file_entry_identifier );
-
-/* TODO implement is empty */
-/* TODO implement is allocated */
-	if( info_handle_file_entry_value_with_name_fprint(
-	     info_handle,
-	     file_entry,
-	     NULL,
-	     0,
-	     NULL,
-	     0,
-	     format_version,
-	     error ) != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_PRINT_FAILED,
-		 "%s: unable to print file entry.",
-		 function );
-
-		goto on_error;
-	}
-	if( libfsfat_file_entry_free(
-	     &file_entry,
-	     error ) != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_FINALIZE_FAILED,
-		 "%s: unable to free file entry.",
-		 function );
-
-		goto on_error;
-	}
-	fprintf(
-	 info_handle->notify_stream,
-	 "\n" );
-
-	return( 1 );
-
-on_error:
-	if( file_entry != NULL )
-	{
-		libfsfat_file_entry_free(
-		 &file_entry,
-		 NULL );
-	}
-	return( -1 );
-}
-
 /* Prints the file entry information for a specific path
  * Returns 1 if successful or -1 on error
  */
